force-app/main/default/objects/Web_To_Print_File__c/Web_To_Print_File__c.object-meta.xml
<CustomObject>
    <label>Web To Print File</label>
    <nameField>
        <label>Web To Print File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web To Print Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>