force-app/main/default/objects/Web_To_Print_File__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <formula>(Fulfillment__r.FName__c + Fulfillment__r.LName__c + &quot;_&quot; + Fulfillment__r.CC_Editor_Product__c + &quot;_&quot; + Fulfillment__r.CC_Editor_Template__c + &quot;_&quot; + Fulfillment__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Name</label>
    <type>Text</type>
</CustomField>