force-app/main/default/objects/Web_To_Print_File__c/fields/Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipLabel>Web To Print Files</relationshipLabel>
    <relationshipName>Web_To_Print_Files</relationshipName>
    <type>Lookup</type>
</CustomField>