force-app/main/default/objects/Web_To_Print_File__c/fields/Image_Download_Link__c.field-meta.xml
<CustomField>
    <fullName>Image_Download_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://www.fivestarprofessional.com/webtoprintimage/&quot; +  Id, &quot;https://www.fivestarprofessional.com/webtoprintimage/&quot; +  Id, &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Download Link</label>
    <type>Text</type>
</CustomField>